[gd_scene load_steps=5 format=3 uid="uid://c1mv58djkb4nw"]

[ext_resource type="Script" uid="uid://heoa2qv10646" path="res://home_screen.gd" id="1_6t2h2"]
[ext_resource type="Theme" uid="uid://bw27kyo8oueeq" path="res://button_theme.tres" id="2_gna5p"]
[ext_resource type="Texture2D" uid="uid://lpyqoji76o6s" path="res://Creature Images/EEEEEEEE.png" id="3_75kvq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_outur"]
bg_color = Color(0.61339027, 0.61339027, 0.6133901, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6t2h2")

[node name="Goals Button" type="Button" parent="."]
offset_top = 1136.0
offset_right = 144.0
offset_bottom = 1280.0
theme = ExtResource("2_gna5p")
text = "Goals"

[node name="Tasks Button" type="Button" parent="."]
offset_left = 144.0
offset_top = 1136.0
offset_right = 288.0
offset_bottom = 1280.0
theme = ExtResource("2_gna5p")
text = "Tasks"

[node name="Home Button" type="Button" parent="."]
offset_left = 288.0
offset_top = 1136.0
offset_right = 432.0
offset_bottom = 1280.0
theme = ExtResource("2_gna5p")
text = "Home"

[node name="Battle Button" type="Button" parent="."]
offset_left = 432.0
offset_top = 1136.0
offset_right = 576.0
offset_bottom = 1280.0
theme = ExtResource("2_gna5p")
text = "Battle"

[node name="Creatures Button" type="Button" parent="."]
offset_left = 576.0
offset_top = 1136.0
offset_right = 720.0
offset_bottom = 1280.0
theme = ExtResource("2_gna5p")
text = "Creatures"

[node name="Settings Button" type="Button" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 145.0
offset_bottom = 145.0
theme = ExtResource("2_gna5p")
text = "Settings"
icon_alignment = 1

[node name="Eeeeeeee" type="Sprite2D" parent="."]
position = Vector2(304, 792)
scale = Vector2(0.5, 0.513)
texture = ExtResource("3_75kvq")

[node name="Options Panel" type="Panel" parent="."]
z_index = 1
offset_left = 85.0
offset_top = 300.0
offset_right = 635.0
offset_bottom = 700.0
theme = ExtResource("2_gna5p")

[node name="Settings Label" type="Label" parent="Options Panel"]
layout_mode = 0
offset_left = 183.0
offset_top = 10.0
offset_right = 367.0
offset_bottom = 83.0
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit Options Button" type="Button" parent="Options Panel"]
z_index = 8
layout_mode = 0
offset_left = 200.0
offset_top = 288.0
offset_right = 350.0
offset_bottom = 349.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_outur")
text = "Back"

[node name="Example Slider" type="HSlider" parent="Options Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 115.0
offset_right = 500.0
offset_bottom = 230.0
theme = ExtResource("2_gna5p")
value = 50.0

[connection signal="pressed" from="Goals Button" to="." method="_on_goals_button_pressed"]
[connection signal="pressed" from="Tasks Button" to="." method="_on_tasks_button_pressed"]
[connection signal="pressed" from="Home Button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="Battle Button" to="." method="_on_battle_button_pressed"]
[connection signal="pressed" from="Creatures Button" to="." method="_on_creatures_button_pressed"]
[connection signal="pressed" from="Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Options Panel/Exit Options Button" to="." method="_on_exit_options_button_pressed"]
